Phase 12: Enhanced Annotation Processor & Type-Safe Column DSL